--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,4 +1,4 @@
 [workspace]
 resolver = "2"
 
-members = ["day-01", "day-02", "day-03", "day-04", "day-05"]
+members = ["day-01", "day-02", "day-03", "day-04", "day-05", "day-06"]
